--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,17 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+        run: python -c "import sys; print(sys.version)"
+
       - name: Run tests...
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          python -m pytest
+          python -m pytest --html=tests/Reports/Report.html
+
+      - name: Test Report Generation
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
+        with:
+          name: Pytest Report           # Name of the folder
+          path: tests/Reports           # Path to test results
