--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,11 +14,13 @@ jobs:
           python-version: '3.x'
         run: python -c "import sys; print(sys.version)"
 
-      - name: Run tests...
+      - name: Setup dependencies...
         run: |
           python -m pip install --upgrade pip
           pip install pytest
-          python -m pytest --html=tests/Reports/Report.html
+
+      - name: Run tests...
+        run: python -m pytest --html=tests/Reports/Report.html
 
       - name: Test Report Generation
         uses: actions/upload-artifact@v4
