--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest
+          pip install pytest-selenium
 
       - name: Run tests...
         run: python -m pytest --html=tests/Reports/Report.html
 
-      - name: Test Report Generation
-        uses: actions/upload-artifact@v4
-        if: success() || failure()
-        with:
-          name: Pytest Report           # Name of the folder
-          path: tests/Reports           # Path to test results
+#      - name: Test Report Generation
+#        uses: actions/upload-artifact@v4
+#        if: success() || failure()
+#        with:
+#          name: Pytest Report           # Name of the folder
+#          path: tests/Reports           # Path to test results
