--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-        run: python -c "import sys; print(sys.version)"
+        # run: python -c "import sys; print(sys.version)"
 
       - name: Setup dependencies...
         run: |
@@ -23,9 +23,9 @@ jobs:
       - name: Run tests...
         run: python -m pytest --html=tests/Reports/Report.html
 
-#      - name: Test Report Generation
-#        uses: actions/upload-artifact@v4
-#        if: success() || failure()
-#        with:
-#          name: Pytest Report           # Name of the folder
-#          path: tests/Reports           # Path to test results
+      - name: Test Report Generation
+        uses: actions/upload-artifact@v4
+        if: success() || failure()
+        with:
+          name: Pytest Report           # Name of the folder
+          path: tests/Reports           # Path to test results
