--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-        # run: python -c "import sys; print(sys.version)"
 
       - name: Setup dependencies...
         run: |
           python -m pip install --upgrade pip
+          python -c "import sys; print(sys.version)"
           pip install pytest
           pip install pytest-selenium
 
